# restaurant_assistant

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 232143805b70_add_menu_models.py  2ba2ef54266f_fixes.py  2c48f6f50777_init_migration.py  326cab64a71b_init.py  478d54451d7a_commit_text.py  82916ca3493d_test.py  9f435f1e1ef1_init_migration.py  d780030f7166_init_migration.py
src/: main.py
src/config/: .env  configs.py
src/db/: base.py  menu_db_schema.drawio  models.py  session.py
src/endpoints/: categories.py  compounds.py  dishes.py  ingredients.py  items.py  menu.py  restaurants.py  subcategories.py
src/menu/: models.py
src/repository/: base.py  restaurants.py
src/repository/crud/: base.py  categories.py  compounds.py  dishes.py  exception.py  ingredient.py  ingredients.py  items.py  menu.py  restaurants.py  subcategories.py
src/repository/filter/: base.py  categories.py  compounds.py  dishes.py  exception.py  ingredients.py  menu.py  restaurants.py  subcategories.py
src/repository/unit_of_work/: base.py
src/schemas/: categories.py  compounds.py  dishes.py  ingredients.py  items.py  menu.py  restaurants.py  subcategories.py
src/services/: base.py  categories.py  compounds.py  dishes.py  ingredients.py  items.py  menu.py  restaurants.py  subcategories.py
tests/: restaurant_test.py
