[tool.poetry]
name = "restaurant-assistant"
version = "0.1.0"
description = ""
authors = ["Bogdan Dovgal"]
readme = "README.md"
packages = [{include = "restaurant_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
SQLAlchemy = "^2.0.15"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
