[tool.poetry]
name = "restaurant-assistant"
version = "0.1.0"
description = ""
authors = ["Bogdan Dovgal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.2"}
SQLAlchemy = "^2.0.15"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
aiosqlite = "^0.19.0"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.7"
pytest = "^7.4.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
